force-app/main/default/objects/Case/fields/Application_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Contact_Type__c</fullName>
    <label>Application Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applicant Representative</fullName>
            </value>
            <value>
                <fullName>Company Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>