force-app/main/default/objects/Case/fields/Cargo_Classification_Select__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Classification_Select__c</fullName>
    <label>Classification of Transported Cargo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Freight</fullName>
            </value>
            <value>
                <fullName>Household Goods</fullName>
            </value>
            <value>
                <fullName>Metal: Sheets, Coils, Rolls</fullName>
            </value>
            <value>
                <fullName>Motor Vehicles</fullName>
            </value>
            <value>
                <fullName>Drive Away/Tow Away</fullName>
            </value>
            <value>
                <fullName>Logs, Poles, Beams, Lumber</fullName>
            </value>
            <value>
                <fullName>Building Materials</fullName>
            </value>
            <value>
                <fullName>Mobile Home</fullName>
            </value>
            <value>
                <fullName>Fresh Produce</fullName>
            </value>
            <value>
                <fullName>Liquids/Gases</fullName>
            </value>
            <value>
                <fullName>Intermodal</fullName>
            </value>
            <value>
                <fullName>Machinery</fullName>
            </value>
            <value>
                <fullName>Passengers</fullName>
            </value>
            <value>
                <fullName>Oil Field Equipment</fullName>
            </value>
            <value>
                <fullName>Livestock</fullName>
            </value>
            <value>
                <fullName>Grain, Feed, Hay</fullName>
            </value>
            <value>
                <fullName>Coal/Coke</fullName>
            </value>
            <value>
                <fullName>Meat</fullName>
            </value>
            <value>
                <fullName>Garbage, Refuse, Trash</fullName>
            </value>
            <value>
                <fullName>US Mail</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Commodities Dry Bulk</fullName>
            </value>
            <value>
                <fullName>Refrigerated Food</fullName>
            </value>
            <value>
                <fullName>Beverages</fullName>
            </value>
            <value>
                <fullName>Paper Product</fullName>
            </value>
            <value>
                <fullName>Utility</fullName>
            </value>
            <value>
                <fullName>Farm Supplies</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Water Well</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>