force-app/main/default/objects/Case/fields/CC_Number__c.field-meta.xml
<CustomField>
    <fullName>CC_Number__c</fullName>
    <label>CC #</label>
    <length>20</length>
    <maskChar>asterisk</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>