force-app/main/default/objects/Case/fields/Driver_Operate_Canada__c.field-meta.xml
<CustomField>
    <fullName>Driver_Operate_Canada__c</fullName>
    <label># of Drivers Operating in Canada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>