force-app/main/default/objects/Case/fields/Drivers_Operate_Mexico__c.field-meta.xml
<CustomField>
    <fullName>Drivers_Operate_Mexico__c</fullName>
    <label># of Drivers Operating in Mexico</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>