force-app/main/default/objects/Case/fields/EIN__c.field-meta.xml
<CustomField>
    <fullName>EIN__c</fullName>
    <label>EIN</label>
    <length>9</length>
    <maskChar>asterisk</maskChar>
    <maskType>sin</maskType>
    <type>EncryptedText</type>
</CustomField>