force-app/main/default/objects/Case/fields/Freight_Forwarder_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>Freight_Forwarder_Vehicles__c</fullName>
    <label>Freight Forwarder Operate Vehicles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>