force-app/main/default/objects/Case/fields/IEP_Trailer_Chassis_Owned__c.field-meta.xml
<CustomField>
    <fullName>IEP_Trailer_Chassis_Owned__c</fullName>
    <label>IEP Trailer Chassis Owned</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>