force-app/main/default/objects/Case/fields/IEP_Trailer_Chassis_Term_Leased__c.field-meta.xml
<CustomField>
    <fullName>IEP_Trailer_Chassis_Term_Leased__c</fullName>
    <label>IEP Trailer Chassis Term Leased</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>