force-app/main/default/objects/Case/fields/Number_Canada_CMVs__c.field-meta.xml
<CustomField>
    <fullName>Number_Canada_CMVs__c</fullName>
    <label># CMVs Operated in Canada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>