force-app/main/default/objects/Case/fields/Number_CMVs_Interstate_Commerce__c.field-meta.xml
<CustomField>
    <fullName>Number_CMVs_Interstate_Commerce__c</fullName>
    <label># CMVs Operated Interstate Commerce</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>