force-app/main/default/objects/Case/fields/Number_Drivers_CDL__c.field-meta.xml
<CustomField>
    <fullName>Number_Drivers_CDL__c</fullName>
    <label># of Drivers with Commercial Licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>