force-app/main/default/objects/Case/fields/NUMBER_Mexico_CMVs__c.field-meta.xml
<CustomField>
    <fullName>NUMBER_Mexico_CMVs__c</fullName>
    <label># CMVs Operated in Mexico</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>