force-app/main/default/objects/Case/fields/Number_non_CMV_Property__c.field-meta.xml
<CustomField>
    <fullName>Number_non_CMV_Property__c</fullName>
    <label>Number of Non-CMVs to be Operated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>