force-app/main/default/objects/Case/fields/Operate_Interstate_winthin_radius__c.field-meta.xml
<CustomField>
    <fullName>Operate_Interstate_winthin_radius__c</fullName>
    <label># of Drivers Interstate Within 100 Miles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>