force-app/main/default/objects/Case/fields/Payment_First__c.field-meta.xml
<CustomField>
    <fullName>Payment_First__c</fullName>
    <label>CC First Name</label>
    <length>50</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>