force-app/main/default/objects/Case/fields/Payment_Last__c.field-meta.xml
<CustomField>
    <fullName>Payment_Last__c</fullName>
    <label>CC Last Name</label>
    <length>50</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>