force-app/main/default/objects/Case/fields/Straight_Trucks_Owned__c.field-meta.xml
<CustomField>
    <fullName>Straight_Trucks_Owned__c</fullName>
    <label>Straight Trucks Owned</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>