force-app/main/default/objects/Case/fields/Straight_Trucks_Tow_Driveway__c.field-meta.xml
<CustomField>
    <fullName>Straight_Trucks_Tow_Driveway__c</fullName>
    <label>Straight Trucks Tow/Driveway</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>