force-app/main/default/objects/Case/fields/Trailers_Owned__c.field-meta.xml
<CustomField>
    <fullName>Trailers_Owned__c</fullName>
    <label>Trailers Owned</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>