force-app/main/default/objects/Case/fields/Trailers_Term_Leased__c.field-meta.xml
<CustomField>
    <fullName>Trailers_Term_Leased__c</fullName>
    <label>Trailers Term Leased</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>