force-app/main/default/objects/Case/fields/Trailers_Tow_Driveway__c.field-meta.xml
<CustomField>
    <fullName>Trailers_Tow_Driveway__c</fullName>
    <label>Trailers Tow Driveway</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>