force-app/main/default/objects/Case/fields/Trailers_Trip_Leased__c.field-meta.xml
<CustomField>
    <fullName>Trailers_Trip_Leased__c</fullName>
    <label>Trailers Trip Leased</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>