force-app/main/default/objects/Case/fields/Transoprt_Property__c.field-meta.xml
<CustomField>
    <fullName>Transoprt_Property__c</fullName>
    <label>Transport Property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>