force-app/main/default/objects/Case/fields/Truck_Tractors_Owned__c.field-meta.xml
<CustomField>
    <fullName>Truck_Tractors_Owned__c</fullName>
    <label>Truck Tractors Owned</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>