force-app/main/default/objects/Case/fields/Truck_Tractors_Term_Leased__c.field-meta.xml
<CustomField>
    <fullName>Truck_Tractors_Term_Leased__c</fullName>
    <label>Truck Tractors Term Leased</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>