force-app/main/default/objects/Case/fields/Truck_Tractors_Tow_Driveway__c.field-meta.xml
<CustomField>
    <fullName>Truck_Tractors_Tow_Driveway__c</fullName>
    <label>Truck Tractors Tow Driveway</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>