force-app/main/default/objects/Case/fields/Type_Property_Transported__c.field-meta.xml
<CustomField>
    <fullName>Type_Property_Transported__c</fullName>
    <label>Type of Property Transported</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hazardous Materials</fullName>
            </value>
            <value>
                <fullName>Household Goods</fullName>
            </value>
            <value>
                <fullName>Exempt Commodities</fullName>
            </value>
            <value>
                <fullName>Other Non-Hazardous Freight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>