force-app/main/default/objects/Case/fields/Types_Freight_Forwarder__c.field-meta.xml
<CustomField>
    <fullName>Types_Freight_Forwarder__c</fullName>
    <label>Types Freight Forwarder</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Freight</fullName>
            </value>
            <value>
                <fullName>Household Goods</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>